--- a/6-流水线相关问题.md
+++ b/6-流水线相关问题.md
@@ -2,7 +2,7 @@ HITwh NSCSCC Team | 哈尔滨工业大学（威海）全国大学生计算机系
 
 [TOC]
 
-# 6-流水线数据相关问题
+# 6-流水线相关问题
 
 流水线中经常会有一些被称为“相关”的问题发生，它使得指令序列中下一条指令没有办法按照设计的时钟周期执行，这些“相关”会降低流水线的性能。
 
@@ -23,6 +23,10 @@ HITwh NSCSCC Team | 哈尔滨工业大学（威海）全国大学生计算机系
 
 这样就发生了存储器访问冲突，产生了结构相关。
 
+## 控制相关
+
+指的是流水线中的分支指令或者其他需要改写PC的指令造成的相关。
+
 ## 数据相关
 
 **很常见的一种相关类型**，指的是流水线中在执行的几条指令里面，有一条或者多条指令依赖于前面指令的执行结果。
@@ -31,20 +35,18 @@ HITwh NSCSCC Team | 哈尔滨工业大学（威海）全国大学生计算机系
 
 1. RAW：写后读数据，即后面的指令必须在前面的指令写之后读取数据，才能有正确结果；
 
-   - 比如
-
-     ```
-     ORI $1, $0, 0x1100
-     ORI $2, $1, 0x0020
-     ```
-
-     ![1](./pic/6/1.jpg)
-
-     第一条ORI指令将写寄存器1，随后的第二条ORI指令需要读出寄存器1的数据，但是第一条指令还处于执行阶段，要在写回阶段才会把最新的值提交到RegFile，那么如果第二条ORI指令继续执行的话，就会得出错误的结果。
-
-     就和之前在“3-什么是五级流水、数据前推、流水线暂停”中提到的一样，工人B需要用C加工的螺丝刀加工目前这个产品，但是这个螺丝刀只能在E加工完成后才能用得到，此时如果继续加工的话，B工人加工出来的产品将不是合格的。
-
 2. WAR：读后写数据，即后面的指令必须在前面的指令读之后写入数据，才能有正确结果；
 
 3. WAW：写后写数据，即后面的指令必须在前面的指令写之后写入数据，才能有正确结果；
 
+### 对于本文档实现的简单CPU
+
+从ORI指令的实现过程可以知道：
+
+- ORI只有在流水线WB阶段才会写回寄存器，因此不存在WAW相关；
+
+而对于五级流水线的MIPS CPU来说：
+
+- 因为只能在ID阶段读寄存器，WB阶段写寄存器，所以不存在WAR相关
+
+这样一看，问题简单了许多。
