- 修改文档 - preview - 增加了一部分内容 > 说到底 就是改了一点点东西 > 感谢Prof. Hu (Sen)

--- a/3-什么是五级流水、数据前推、流水线暂停.md
+++ b/3-什么是五级流水、数据前推、流水线暂停.md
@@ -71,6 +71,8 @@ HITwh NSCSCC Team | 哈尔滨工业大学（威海）全国大学生计算机系
    - D在对第一个产品进行工序，这个产品已经被A B C都处理了！现在在D这儿。
 3. 放眼望去，整个工厂里面每个人都在有条不紊的做自己的工作！这使你充满了决心！
 
+> 动态流程可以查看项目中的PPT部分，里面有动画帮助理解
+
 ### 流水线暂停
 
 想象你还是工人C，你负责”执行“工序，但是现在出现了一个大问题：
@@ -112,4 +114,3 @@ HITwh NSCSCC Team | 哈尔滨工业大学（威海）全国大学生计算机系
 4. 下一个声音发出来了！你们两个若无其事地继续进行着各自的工作；
 5. 第n个声音发出来了，B又突然悄悄给你说：”我需要螺丝刀！“
 6. 你们两个又开始了交易……
-
