--- a/7-数据相关的解决办法介绍.md
+++ b/7-数据相关的解决办法介绍.md
@@ -41,7 +41,7 @@ HITwh NSCSCC Team | 哈尔滨工业大学（威海）全国大学生计算机系
 
 流水线暂停为流水线增加了很多空白周期，以至于每个器件不能最高效率发挥自己的能力，导致处理器性能下降。
 
-但是值得注意的是，有的场合又必须请求流水线暂停，这些情况此讲义不做讲解。
+但是值得注意的是，有的场合（比如和Load指令的数据相关）又必须请求流水线暂停，这些情况此讲义不做讲解。
 
 ## 数据前推
 
@@ -61,8 +61,8 @@ HITwh NSCSCC Team | 哈尔滨工业大学（威海）全国大学生计算机系
 
 - 新的寄存器值可以在执行阶段计算出来。
 
-如果是加载指令，那么久不满足这个前提，因为：
+如果是加载指令，那么就**不满足**这个前提，因为：
 
 - 加载指令在访存阶段才能获得最终结果。
 
-这是一种load相关，此讲义不提及。
+这是一种load相关，需要进行流水线暂停。
