修改了单周期、多周期相关定义

--- a/1-单周期、多周期和流水线处理器.md
+++ b/1-单周期、多周期和流水线处理器.md
@@ -42,15 +42,15 @@ HITwh NSCSCC Team | 哈尔滨工业大学（威海）全国大学生计算机系
 
 单周期CPU在一个时钟周期内完成所有的工作。例如指令取出，得到结果等，它们全部都在一个时钟周期内完成。
 
-**缺点**：虽然大家都在同一个信号下开始同步工作，但是有的器件完成很快，有的器件完成很慢，于是先完成工作的要停下来什么事情都不干，来等待速度慢的器件完成它们的工作。这样速度慢的器件变成了瓶颈，导致每一个时钟周期必须要拖得很长来保证CPU在这个时钟周期内完成工作，从而减低了主频。
+**缺点**：在单周期CPU中，时钟周期就是指令周期，因此每个指令周期都是固定的时长；而由于不同的指令执行的快慢是不同的，导致指令周期必须取决于执行时间最长的指令，因此在执行较简单的指令时会浪费时间，处理器的主频也难以提高。
 
 ## 多周期处理器
 
-多周期CPU将整个CPU的执行过程分成几个阶段，每个阶段用一个时钟去完成。不仅能提高CPU主频，还为组成指令流水线提供了基础。
+多周期CPU将整个CPU的执行过程分成几个阶段，每个阶段用一个时钟去完成。在多周期CPU中，一个指令周期可以由数个时钟周期组成，不同的指令可以占用不同的时钟周期数，从而提高了时间片的利用率，不仅能提高CPU主频，还为组成指令流水线提供了基础。
 
 然而，多周期的CPU中，器件的工作方式还是“等待”，即必须等待当前指令全部执行完毕后，才会继续执行下一条指令。
 
-**缺点**：在执行一个速度非常慢的指令（比如说DIV）的时候，ALU在繁忙地进行工作，但是PC还有译码模块皆无所事事，在ALU终于完成工作拿出了结果之后，PC才会拿出下一个指令的地址，然后译码模块“象征性”地译了一下码过后，又是一段无所事事的“ALU表演时间”。
+**缺点**：多周期CPU执行过程中，同一时间片内只有一个部件是繁忙的，其余部件都处于空闲状态；尽管提高了主频，但时间利用率依旧不高。
 
 ## 流水线处理器
 
