更改一些细小错误

--- a/1-单周期、多周期和流水线处理器.md
+++ b/1-单周期、多周期和流水线处理器.md
@@ -24,7 +24,7 @@ HITwh NSCSCC Team | 哈尔滨工业大学（威海）全国大学生计算机系
 
 于是，音乐的节拍解决了这个问题。指挥家根据节拍来即兴指挥乐团，而乐手们又跟着同一个节拍演奏自己不同的乐谱，从而构成了这样一曲有序动听的交响乐。
 
-就和每张乐谱都有自己的节拍一样，CPU以及外设也都有自己的节拍：CLK（时钟信号），它们统一在同一个时钟信号下的上升沿（或者下降沿）进行自己的工作，这样才不会因为每个器件速度的不同而打破了“和谐”。
+就和每张乐谱都有自己的节拍一样，CPU以及外设也都有自己的节拍：CLK（时钟信号），它们统一在同一个时钟信号下的上升沿或者下降沿进行自己的工作，这样才不会因为每个器件速度的不同而打破了“和谐”。
 
 ### 详细的解释
 
@@ -32,7 +32,7 @@ HITwh NSCSCC Team | 哈尔滨工业大学（威海）全国大学生计算机系
 
    无固定频率的CPU和周边工作单元协同工作时，因为大家步调不一致，沟通起来效率会打折扣（通才采用应答的模式来进行速度匹配，类似于TCP）。
 
-   有的器件它的工作速度可能非常快（比如说一个单纯的PC，最简单的情况下它只会对上一个上升沿（或下降沿）到来时自己的值+4），同时，有的器件它工作的速度可能会非常慢（比如说FPU在计算一个极其复杂的浮点数除法时，再如DIV模块进行32位除法的时候一般需要32个周期），当然所有器件都不能想当然地进行工作，所以需要一个时钟信号让大家同步起来，一起协调地完成每个工作；
+   有的器件它的工作速度可能非常快（比如说一个单纯的PC，最简单的情况下它只会对上一个上升沿或下降沿到来时自己的值+4），同时，有的器件它工作的速度可能会非常慢（比如说FPU在计算一个极其复杂的浮点数除法时，再如DIV模块进行32位除法的时候一般需要32个周期），当然所有器件都不能想当然地进行工作，所以需要一个时钟信号让大家同步起来，一起协调地完成每个工作；
 
 2. “同步地”工作
 
