--- a/3-什么是五级流水、数据前推、流水线暂停.md
+++ b/3-什么是五级流水、数据前推、流水线暂停.md
@@ -45,12 +45,12 @@ HITwh NSCSCC Team | 哈尔滨工业大学（威海）全国大学生计算机系
 
 ### 五级流水纵向来看
 
-1. 你是工人C，你只负责把产品“执行”，这使你充满了决心；
-2. 第一个声音发出，传送带向前推进一格，但是此时传送带在你这儿的位置上并没有东西，这使你充满了决心；
-3. 第二个声音发出，传送带向前推进一格，你看到B正在对一个东西“译码”，但是此时传送带在你这儿的位置上仍然没有东西，这使你充满了决心；
-4. 第三个声音发出，传送带向前推进一格，你传送带有东西了！你在下一个声音到来之前对这个东西完成了“执行”工序，这使你充满了决心；
+1. 你是工人C，你只负责把产品“执行”；
+2. 第一个声音发出，传送带向前推进一格，但是此时传送带在你这儿的位置上并没有东西；
+3. 第二个声音发出，传送带向前推进一格，你看到B正在对一个东西“译码”，但是此时传送带在你这儿的位置上仍然没有东西；
+4. 第三个声音发出，传送带向前推进一格，你传送带有东西了！你在下一个声音到来之前对这个东西完成了“执行”工序；
 5. 第四个声音发出，传送带向前推进一格，你处理的东西到了D那儿，但是你现在又拿到了从B那儿送过来的东西，你又开始加工；
-6. 第五个声音发出、第六个声音发出……声音源源不断地发出，一个一个没有被加工的东西到了你这儿，你在下一个声音发出之前完成了对它们的加工，这使你充满了决心……
+6. 第五个声音发出、第六个声音发出……声音源源不断地发出，一个一个没有被加工的东西到了你这儿，你在下一个声音发出之前完成了对它们的加工……
 7. 第n个声音发出，你在下一个声音发出之前完成了“执行工序，第n+1个声音发出，没有东西再来了，你的东西送到了D那儿；
 8. 第n+2个声音发出，这个东西送到了E那儿；
 9. 最后一个声音发出，这个东西从E那儿被送出去。你们五个人完成了所有产品的加工！
@@ -69,7 +69,7 @@ HITwh NSCSCC Team | 哈尔滨工业大学（威海）全国大学生计算机系
    - C在对第二个产品进行工序，这个产品已经被A B都处理完了，现在在C这儿；
 
    - D在对第一个产品进行工序，这个产品已经被A B C都处理了！现在在D这儿。
-3. 放眼望去，整个工厂里面每个人都在有条不紊的做自己的工作！这使你充满了决心！
+3. 放眼望去，整个工厂里面每个人都在有条不紊的做自己的工作！
 
 > 动态流程可以查看项目中的PPT部分，里面有动画帮助理解
 
@@ -77,7 +77,7 @@ HITwh NSCSCC Team | 哈尔滨工业大学（威海）全国大学生计算机系
 
 想象你还是工人C，你负责”执行“工序，但是现在出现了一个大问题：
 
-- 这个东西太复杂了！你在下一个声音发出之前根本做不完！决心被吓没了！
+- 这个东西太复杂了！你在下一个声音发出之前根本做不完！
 - 你不能把你没做完的东西让传送带送给D加工！这个产品不合格！
 
 这可怎么办呢？
