--- a/7-数据相关的解决办法介绍.md
+++ b/7-数据相关的解决办法介绍.md
@@ -22,7 +22,7 @@ HITwh NSCSCC Team | 哈尔滨工业大学（威海）全国大学生计算机系
 
 如第3节提到的一样，一个工人大喊“做不完了！”，然后包工头将停止传送带的运行。
 
-这之间有两个个细节：
+这之间有两个细节：
 
 - 工人向包工头发出信号请求流水线暂停
 - 包工头收到信号后决定暂不暂停，并且如果暂停的话就发“停止”信号给传送带，让其停止运动
