更改关于相关的细微内容

--- a/7-数据相关的解决办法介绍.md
+++ b/7-数据相关的解决办法介绍.md
@@ -5,14 +5,14 @@ HITwh NSCSCC Team | 哈尔滨工业大学（威海）全国大学生计算机系
 对于数据相关，通常来说有三种解决方式：
 
 1. 插入暂停周期（流水线暂停）；
-2. 数据前推；
+2. 数据前推（Forwarding，书上译作定向技术）；
 3. 编译器调度。
 
 在这个讲义中我们只讲前两种方法。
 
 ## 流水线暂停
 
-视觉上来说，在检测到流水线相关问题时，在流水线中插入一些暂停周期，效果如图所示：
+视觉上来说，在检测到相关问题时，在流水线中插入一些暂停周期，效果如图所示：
 
 ![1](./pic/7/1.jpg)
 
