修改了流水线暂停的部分表述

--- a/9-2-ORI 指令数据相关的解决办法 2 - 流水线暂停.md
+++ b/9-2-ORI 指令数据相关的解决办法 2 - 流水线暂停.md
@@ -137,11 +137,26 @@ PC模块的代码如下：
 
 ### 修改ID阶段
 
-ID模块可以请求流水线暂停，但是由于目前ORI指令不会在ID阶段请求暂停（加载、存储指令才会有这种情况，感兴趣的同学自行学习），所以直接让ID模块发出“不暂停”的信号：
+ID模块可以请求流水线暂停，采用流水线暂停解决ORI指令数据冲突就需要在这个地方发出流水线暂停请求，但我们建议采用**数据前推**的方式解决流水线数据冲突问题，我们给出具体思路：
 
 ```verilog
-assign stallreq = `NoStop;
+if(与前面指令数据相关) begin
+   stallreq_from_id <= `Stop; 
+end
 ```
+
+那如何判断与前面的指令数据相关呢？我们给出两种思路：
+
+- 和数据前推类似，从EX和MEM段查看是否有读写相同寄存器的情况发生
+- 在ID模块增加寄存器，存储前两条指令的写寄存器地址，用于判断是否发生冲突
+
+对于第一种，其实已经和数据前推类似，这里感觉“多此一举”
+
+对于第二种，我们可以说**强烈不推荐**，因为这增加了ID段的“负担”，而且不利于整个CPU的“鲁棒性”
+
+> 注意：
+>
+> 对于Load指令的数据相关问题，我们只能用流水线暂停完成（大家可以思考为什么？）
 
 修改ID/EX模块：
 
