用'OpenMIPS'或书名替代掉部分'opm'表述

--- a/9-2-ORI 指令数据相关的解决办法 2 - 流水线暂停.md
+++ b/9-2-ORI 指令数据相关的解决办法 2 - 流水线暂停.md
@@ -6,7 +6,7 @@ HITwh NSCSCC Team | 哈尔滨工业大学（威海）全国大学生计算机系
 
 ## 注意事项
 
-流水线暂停位于opm的第七章，里面已经实现了很多东西，所以这篇文档的代码和之前的不兼容，于是只截取重点部分给大家讲解。
+流水线暂停位于《自己动手写CPU》第七章，里面已经实现了很多东西，所以这篇文档的代码和之前的不兼容，于是只截取重点部分给大家讲解。
 
 不过因为大家学习本文档的初衷是理解五级流水如何实现，所以代码并不重要，重要的是理解思维。
 
