--- a/7-数据相关的解决办法介绍.md
+++ b/7-数据相关的解决办法介绍.md
@@ -33,7 +33,7 @@ HITwh NSCSCC Team | 哈尔滨工业大学（威海）全国大学生计算机系
 
 需要注意的是，流水线暂停不止可以解决相关问题。
 
-在进行一个非常复杂的运算的时候（比如说opm实现的除法在EX阶段需要32个时钟周期才能得出结果），它可以阻塞流水线的流动以确保结果正确。
+在进行一个非常复杂的运算的时候（比如说OpenMIPS实现的除法在EX阶段需要32个时钟周期才能得出结果），它可以阻塞流水线的流动以确保结果正确。
 
 虽然本质上还是解决的相关问题，但是流水线暂停还起着控制流水线流动的关键作用。
 
