--- a/6-流水线冲突.md
+++ b/6-流水线冲突.md
@@ -23,11 +23,11 @@ HITwh NSCSCC Team | 哈尔滨工业大学（威海）全国大学生计算机系
 
 这样就发生了存储器访问冲突，产生了结构冲突。
 
-## 控制相关
+## 控制冲突
 
 指的是流水线中的分支指令或者其他需要改写PC的指令造成的冲突。
 
-## 数据相关
+## 数据冲突
 
 **很常见的一种冲突类型**，指的是流水线中在执行的几条指令里面，有一条或者多条指令依赖于前面指令的执行结果。
 
